--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 
 <html>
   <head>
+    <link rel="icon" href="img/icon.jpg">
+
     <title>
-      p5.js example
+      Grid game
     </title>
+
     <script src="p5.js"></script>
+    <script src="tile.js"></script>
     <script src="sketch.js"></script>
   </head>
 
