--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <meta charset="utf-8">
 
 <html>
-  <head>
-    <link rel="icon" href="img/icon.jpg">
+	<head>
+		<link rel="icon" href="img/icon.jpg">
 
-    <title>
-      Grid game
-    </title>
+		<title>
+			Grid game
+		</title>
 
-    <script src="p5.js"></script>
-    <script src="tile.js"></script>
-    <script src="sketch.js"></script>
-  </head>
+		<script src="p5.js"></script>
+		<script src="tile.js"></script>
+		<script src="sketch.js"></script>
+	</head>
 
-  <body style="padding: 0; margin: 0;">
-  </body>
+	<body style="padding: 0; margin: 0;">
+		<div>
+			<a href="https://raw.githubusercontent.com/StaryMD/StaryMD.github.io/master/moves.txt" style="font-size: 40px; position: absolute; top: 450px; left: 1230px;" target="_blank">
+				Link
+			</a>
+		</div>
+	</body>
 </html>
